syntax = "proto3";

option csharp_namespace = "HandsOn_User";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc getAllCustomer (Empty) returns (stream Customer);
  rpc getCustomerById (CustomerId) returns (Customer);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message Empty {}

// Customer Object
message Customer {
  string id = 1;
  string username = 2;
  string password = 3;
}

// Parameter CustomerID
message CustomerId {
  string id = 1;
}
